AppSubsystem/BackendECS/v9/cf-ecs-alb.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: ALB with SSL certificates, security groups, and Parameter Store outputs

Parameters:
  AppShortName:
    Description: Application name in lower case
    Type: String

  EnvName:
    Description: Environment Name
    Type: String
    AllowedValues:
      - nprd
      - nprd-dev
      - nprd-dev1
      - nprd-dev2
      - nprd-stg
      - nprd-sit1
      - nprd-sit2
      - nprd-sit3
      - nprd-sit
      - nprd-sit-a
      - nprd-sit-b
      - nprd-sit-c
      - nprd-uat
      - nprd-uat-a
      - nprd-uat-b
      - nprd-uat-c
      - nprd-pt
      - nprd-pp
      - nprd-pp-a
      - nprd-pp-b
      - nprd-pp-c
      - prod
      - prod-a
      - prod-b
      - prod-c

  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: The VPC ID where the ALB will be created.

  VPCSubnetCidrAZ1:
    Type: String
    Description: VPC Subnet CIDR for App AZ1

  VPCSubnetCidrAZ2:
    Type: String
    Description: VPC Subnet CIDR for App AZ2
  VPCSubnetCidrAZ3:
    Type: String
    Description: VPC Subnet CIDR for App AZ3
    Default: ''
  ALBName:
    Type: String
    Description: Name for the new Application Load Balancer to be created.
  ALBSubnetIds:
    Type: CommaDelimitedList
    Description: The Subnet IDs for App Subnets where the ECS ALB will be deployed.
  VPCSubnetCidrInternetIngressAlbAZ1:
    Type: String
    Description: Internet ALB Subnet CIDR for AZ1 (optional)
    Default: ''
  VPCSubnetCidrInternetIngressAlbAZ2:
    Type: String
    Description: Internet ALB Subnet CIDR for AZ2 (optional)
    Default: ''
  VPCSubnetCidrInternetIngressAlbAZ3:
    Type: String
    Description: Internet ALB Subnet CIDR for AZ3 (optional)
    Default: ''
  DefaultCertificateArn:
    Type: String
    Description: ARN of the default SSL certificate
  AdditionalCertificateArn:
    Type: String
    Description: ARN of the additional SSL certificate
  ALBSslPolicy:
    Type: String
    Description: "ELB Security Policy for the HTTPS listener (TLS 1.2+ only)"
    AllowedValues:
      - ELBSecurityPolicy-TLS13-1-2-2021-06
      - ELBSecurityPolicy-TLS13-1-2-Res-2021-06
      - ELBSecurityPolicy-TLS13-1-2-Ext1-2021-06
      - ELBSecurityPolicy-TLS13-1-2-Ext2-2021-06
      - ELBSecurityPolicy-TLS13-1-3-2021-06
      - ELBSecurityPolicy-TLS13-1-2-Res-PQ-2025-09
      - ELBSecurityPolicy-TLS13-1-2-PQ-2025-09
      - ELBSecurityPolicy-TLS13-1-2-Ext1-PQ-2025-09
      - ELBSecurityPolicy-TLS13-1-2-Ext2-PQ-2025-09
      - ELBSecurityPolicy-TLS13-1-3-PQ-2025-09
      - ELBSecurityPolicy-TLS-1-2-Ext-2018-06
      - ELBSecurityPolicy-TLS-1-2-2017-01
    Default: ELBSecurityPolicy-TLS13-1-2-2021-06
  NLBSecurityGroupId:
    Type: String
    Description: Security Group ID of the NLB to allow inbound traffic
    Default: ''
  ServiceContainerPort:
    Type: Number
    Description: "The port on which the container listens (e.g., 80, Custom Port)"
    Default: 8080
  ServiceContainerSSLPort:
    Type: Number
    Description: "The port on which the container listens (e.g., 443, Custom Port)"
    Default: 8443
  PrefixListId:
    Type: String
    Description: ID of the prefix list to allow inbound traffic (optional)
    Default: ''
Conditions:
  IsProduction: !Or
    - !Equals [!Ref EnvName, prod]
    - !Equals [!Ref EnvName, prod-a]
    - !Equals [!Ref EnvName, prod-b]
    - !Equals [!Ref EnvName, prod-c]
  HasVPCSubnetCidrAZ3: !Not [!Equals [!Ref VPCSubnetCidrAZ3, '']]
  HasVPCSubnetCidrInternetIngressAlbAZ1: !Not [!Equals [!Ref VPCSubnetCidrInternetIngressAlbAZ1, '']]
  HasVPCSubnetCidrInternetIngressAlbAZ2: !Not [!Equals [!Ref VPCSubnetCidrInternetIngressAlbAZ2, '']]
  HasVPCSubnetCidrInternetIngressAlbAZ3: !Not [!Equals [!Ref VPCSubnetCidrInternetIngressAlbAZ3, '']]
  HasAdditionalCertificate: !Not [!Equals [!Ref AdditionalCertificateArn, ""]]
  HasNLBSecurityGroup: !Not [!Equals [!Ref NLBSecurityGroupId, '']]
  HasServiceContainerPort: !Not [!Equals [!Ref ServiceContainerPort, '']]
  HasServiceContainerSSLPort: !Not [!Equals [!Ref ServiceContainerSSLPort, '']]
  HasVPCSubnetCIDRAZ3nServiceContainerPort: !And
    - !Not [!Equals [!Ref VPCSubnetCidrAZ3, '']]
    - !Not [!Equals [!Ref ServiceContainerPort, '']]
  HasVPCSubnetCIDRAZ3nServiceContainerSSLPort: !And
    - !Not [!Equals [!Ref VPCSubnetCidrAZ3, '']]
    - !Not [!Equals [!Ref ServiceContainerSSLPort, '']]
  HasPrefixList: !Not [!Equals [!Ref PrefixListId, '']]

Resources:
  # Security Group for ALB
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      GroupName: !Sub "${ALBName}-sg"
      GroupDescription: Security group for the private ALB
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VPCSubnetCidrAZ1
          Description: Allow traffic from NLB in AZ1
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VPCSubnetCidrAZ2
          Description: Allow traffic from NLB in AZ2
        - !If
          - HasVPCSubnetCidrAZ3
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VPCSubnetCidrAZ3
            Description: Allow traffic from NLB in AZ3
          - !Ref "AWS::NoValue"
        - !If
          - HasVPCSubnetCidrInternetIngressAlbAZ1
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VPCSubnetCidrInternetIngressAlbAZ1
            Description: Allow inbound from Internet Ingress ALB Subnet AZ1
          - !Ref "AWS::NoValue"
        - !If
          - HasVPCSubnetCidrInternetIngressAlbAZ2
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VPCSubnetCidrInternetIngressAlbAZ2
            Description: Allow inbound from Internet Ingress ALB Subnet AZ2
          - !Ref "AWS::NoValue"
        - !If
          - HasVPCSubnetCidrInternetIngressAlbAZ3
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VPCSubnetCidrInternetIngressAlbAZ3
            Description: Allow inbound from Internet Ingress ALB Subnet AZ3
          - !Ref "AWS::NoValue"
        - !If
          - HasNLBSecurityGroup
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            SourceSecurityGroupId: !Ref NLBSecurityGroupId
            Description: Allow inbound traffic from NLB Security Group
          - !Ref "AWS::NoValue"
        - !If
          - HasPrefixList
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            SourcePrefixListId: !Ref PrefixListId
            Description: Allow inbound traffic from Prefix List
          - !Ref "AWS::NoValue"
      SecurityGroupEgress:
        - !If
          - HasServiceContainerPort
          - IpProtocol: tcp
            FromPort: !Ref ServiceContainerPort
            ToPort: !Ref ServiceContainerPort
            CidrIp: !Ref VPCSubnetCidrAZ1
            Description: Allow traffic to backend ecs service
          - !Ref "AWS::NoValue"
        - !If
          - HasServiceContainerPort
          - IpProtocol: tcp
            FromPort: !Ref ServiceContainerPort
            ToPort: !Ref ServiceContainerPort
            CidrIp: !Ref VPCSubnetCidrAZ2
            Description: Allow traffic to backend ecs service
          - !Ref "AWS::NoValue"
        - !If
          - HasVPCSubnetCIDRAZ3nServiceContainerPort
          - IpProtocol: tcp
            FromPort: !Ref ServiceContainerPort
            ToPort: !Ref ServiceContainerPort
            CidrIp: !Ref VPCSubnetCidrAZ3
            Description: Allow traffic to backend ecs service
          - !Ref "AWS::NoValue"
        - !If
          - HasServiceContainerSSLPort
          - IpProtocol: tcp
            FromPort: !Ref ServiceContainerSSLPort
            ToPort: !Ref ServiceContainerSSLPort
            CidrIp: !Ref VPCSubnetCidrAZ1
            Description: Allow traffic to backend ecs service
          - !Ref "AWS::NoValue"
        - !If
          - HasServiceContainerSSLPort
          - IpProtocol: tcp
            FromPort: !Ref ServiceContainerSSLPort
            ToPort: !Ref ServiceContainerSSLPort
            CidrIp: !Ref VPCSubnetCidrAZ2
            Description: Allow traffic to backend ecs service
          - !Ref "AWS::NoValue"
        - !If
          - HasVPCSubnetCIDRAZ3nServiceContainerSSLPort
          - IpProtocol: tcp
            FromPort: !Ref ServiceContainerSSLPort
            ToPort: !Ref ServiceContainerSSLPort
            CidrIp: !Ref VPCSubnetCidrAZ3
            Description: Allow traffic to backend ecs service
          - !Ref "AWS::NoValue"
      Tags:
        - Key: IaCVersion
          Value: AppSubsystem-BackendECS-v9

  # Application Load Balancer
  PrivateALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      Name: !Ref ALBName
      Subnets: !Ref ALBSubnetIds
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Scheme: internal
      LoadBalancerAttributes:
        - Key: idle_timeout.timeout_seconds
          Value: '60'
        - Key: "deletion_protection.enabled"
          Value: "true"
        - Key: routing.http.drop_invalid_header_fields.enabled
          Value: "true"
      Tags:
        - Key: IaCVersion
          Value: AppSubsystem-BackendECS-v9

  # Listener
  HTTPSListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      DefaultActions:
        - Type: fixed-response
          FixedResponseConfig:
            ContentType: text/plain
            MessageBody: "404 Not Found"
            StatusCode: "404"
      LoadBalancerArn: !Ref PrivateALB
      Port: 443
      Protocol: HTTPS
      SslPolicy: !Ref ALBSslPolicy
      Certificates: !If
        - HasAdditionalCertificate
        - - CertificateArn: !Ref DefaultCertificateArn
          - CertificateArn: !Ref AdditionalCertificateArn
        - - CertificateArn: !Ref DefaultCertificateArn

  # Listener Rule for Health Check
  ALBHealthCheckListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      Actions:
        - Type: fixed-response
          FixedResponseConfig:
            ContentType: text/plain
            MessageBody: "ALB HealthCheck is Ok"
            StatusCode: "200"
      Conditions:
        - Field: path-pattern
          Values:
            - /ALBhealth
            - /ALBhealth/*
      ListenerArn: !Ref HTTPSListener
      Priority: 1

  # SSM Parameters
  ALBSecurityGroupIdParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub /${ALBName}/ecs-alb-security-group-id
      Type: String
      Value: !Ref ALBSecurityGroup
      Description: ALB Security Group ID

  HTTPSListenerArn:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub /${ALBName}/alb-https-listener-arn
      Type: String
      Value: !Ref HTTPSListener
      Description: ARN of the HTTPS Listener
